--- a/02-drag-n-drop/styles.css
+++ b/02-drag-n-drop/styles.css
@@ -62,3 +62,15 @@ body {
 .done {
   background: linear-gradient(90deg, #84fab0 0%, #8fd3f4 100%);
 }
+
+.hold {
+  border: 7px solid darkslateblue;
+}
+
+.hide {
+  display: none;
+}
+
+.hovered {
+  border-top: 5px solid brown;
+}
